<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>explorover</name>
  <version>0.0.1</version>
  <description>ROS package for ExploRover, an outdoor reconnaisance robot.</description>
  <!-- Add your dependencies here -->
  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>ament_cmake</exec_depend>
</package>
